--- a/menu_precios.ui
+++ b/menu_precios.ui
@@ -6,25 +6,25 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>765</width>
-    <height>529</height>
+    <width>1117</width>
+    <height>815</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QFrame" name="frame">
+   <widget class="QFrame" name="frame_main">
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>0</y>
-      <width>711</width>
-      <height>461</height>
+      <y>20</y>
+      <width>1091</width>
+      <height>731</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">QFrame {
+     <string notr="true">#frame_main {
     background-color: rgb(255, 252, 242);
     border: 5px solid #b4764f;
     border-radius: 30px;
@@ -36,13 +36,13 @@
     <property name="frameShadow">
      <enum>QFrame::Shadow::Raised</enum>
     </property>
-    <widget class="QLabel" name="Titulo">
+    <widget class="QLabel" name="titulo_precios">
      <property name="geometry">
       <rect>
-       <x>270</x>
-       <y>30</y>
-       <width>161</width>
-       <height>31</height>
+       <x>250</x>
+       <y>60</y>
+       <width>561</width>
+       <height>41</height>
       </rect>
      </property>
      <property name="styleSheet">
@@ -56,17 +56,45 @@ font-family:  &quot;Arial Rounded MT&quot;;
 </string>
      </property>
      <property name="text">
-      <string>MENU</string>
+      <string>PRECIOS</string>
      </property>
      <property name="alignment">
       <set>Qt::AlignmentFlag::AlignCenter</set>
      </property>
     </widget>
+    <widget class="QLineEdit" name="lineEdit_descripcion">
+     <property name="geometry">
+      <rect>
+       <x>140</x>
+       <y>130</y>
+       <width>371</width>
+       <height>51</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">#lineEdit_descripcion{
+	background-color: #ffd7ab;
+	color : rgb(0, 0, 0);
+	border: 2px solid #555555; 
+    border-radius: 5px; 
+	font-size: 25px
+}</string>
+     </property>
+     <property name="inputMask">
+      <string/>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+     <property name="placeholderText">
+      <string>CODIGO BARRA</string>
+     </property>
+    </widget>
     <widget class="QPushButton" name="adic_prod">
      <property name="geometry">
       <rect>
-       <x>130</x>
-       <y>140</y>
+       <x>860</x>
+       <y>130</y>
        <width>131</width>
        <height>51</height>
       </rect>
@@ -89,100 +117,51 @@ QPushButton:pressed {
 }</string>
      </property>
      <property name="text">
-      <string>AGREGAR
-PRODUCTOS</string>
+      <string>BUSCAR</string>
      </property>
     </widget>
-    <widget class="QPushButton" name="impr_etiq">
+    <widget class="QLabel" name="label_resultado">
      <property name="geometry">
       <rect>
-       <x>280</x>
-       <y>140</y>
-       <width>131</width>
-       <height>51</height>
+       <x>140</x>
+       <y>260</y>
+       <width>851</width>
+       <height>421</height>
       </rect>
      </property>
      <property name="styleSheet">
-      <string notr="true">QPushButton{
-font-family: &quot;Arial Rounded MT&quot;;
-color:rgb(91, 27, 0);
-background-color: rgb(205, 150, 108);
-border-radius: 10px;
-padding: 1px 2px;;
-}
-QPushButton:hover {
-    /* 🖱️ Color al pasar por encima */
-    background-color: #b4764f; /* Un azul más oscuro que el base */
-}
-QPushButton:pressed {
-    background-color: #9a5833; /* Un color aún más oscuro */
-
+      <string notr="true">#label_resultado{
+    border: 5px solid #000000;
+	border-radius: 10px;
+	font-size: 180px;
+	color: #000000;
 }</string>
      </property>
      <property name="text">
-      <string>IMPRESION
-ETIQUETAS</string>
+      <string>S/. 0.00</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignmentFlag::AlignCenter</set>
      </property>
     </widget>
-    <widget class="QPushButton" name="nota_vent">
+    <widget class="QLabel" name="label">
      <property name="geometry">
       <rect>
-       <x>430</x>
-       <y>140</y>
-       <width>131</width>
-       <height>51</height>
+       <x>140</x>
+       <y>220</y>
+       <width>221</width>
+       <height>31</height>
       </rect>
      </property>
      <property name="styleSheet">
-      <string notr="true">QPushButton{
-font-family: &quot;Arial Rounded MT&quot;;
-color:rgb(91, 27, 0);
-background-color: rgb(205, 150, 108);
-border-radius: 10px;
-padding: 1px 2px;;
-}
-QPushButton:hover {
-    /* 🖱️ Color al pasar por encima */
-    background-color: #b4764f; /* Un azul más oscuro que el base */
-}
-QPushButton:pressed {
-    background-color: #9a5833; /* Un color aún más oscuro */
+      <string notr="true">#label{
+color: rgb(0, 0, 0);
+font-size:30px
 
 }</string>
      </property>
      <property name="text">
-      <string>NOTAS 
-DE VENTA</string>
-     </property>
-    </widget>
-    <widget class="QPushButton" name="menu_precios">
-     <property name="geometry">
-      <rect>
-       <x>280</x>
-       <y>210</y>
-       <width>131</width>
-       <height>51</height>
-      </rect>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">QPushButton{
-font-family: &quot;Arial Rounded MT&quot;;
-color:rgb(91, 27, 0);
-background-color: rgb(205, 150, 108);
-border-radius: 10px;
-padding: 1px 2px;;
-}
-QPushButton:hover {
-    /* 🖱️ Color al pasar por encima */
-    background-color: #b4764f; /* Un azul más oscuro que el base */
-}
-QPushButton:pressed {
-    background-color: #9a5833; /* Un color aún más oscuro */
-
-}</string>
-     </property>
-     <property name="text">
-      <string>PRECIOS</string>
+      <string>VALOR</string>
      </property>
     </widget>
    </widget>
@@ -192,7 +171,7 @@ QPushButton:pressed {
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>765</width>
+     <width>1117</width>
      <height>33</height>
     </rect>
    </property>
